force-app/main/default/objects/Incident_Asset__c/Incident_Asset__c.object-meta.xml
<CustomObject>
    <label>Incident Asset</label>
    <pluralLabel>Incident Assets</pluralLabel>
    <nameField>
        <label>Incident Asset Name</label>
        <type>AutoNumber</type>
        <displayFormat>IA-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Junction object linking Incidents to affected Assets.</description>
</CustomObject>