force-app/main/default/objects/Incident_Asset__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <type>MasterDetail</type>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Incident Assets</relationshipLabel>
    <relationshipName>Asset_Incidents</relationshipName>
    <relationshipOrder>1</relationshipOrder>
</CustomField>