force-app/main/default/objects/Incident_Asset__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <label>Incident</label>
    <type>MasterDetail</type>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Affected Assets</relationshipLabel>
    <relationshipName>Incident_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>